--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "haha",
+  "name": "vue-multipage",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "breezefeng",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
